<resources>
    <string name="app_name">MitraILifeApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="masuk">Masuk</string>
    <string name="kode_otp_sudah_dikirim">Kode OTP sudah dikirim!</string>
    <string name="kirim_ulang">KIRIM ULANG</string>
    <string name="pilih">Pilih</string>
    <string name="silahkan_tambahkan_menu_makanan_atau_minuman_di_toko_anda">Silahkan tambahkan menu makanan atau minuman di toko Anda</string>
    <string name="belum_ada_menu">Belum Ada Menu</string>
    <string name="tambah_menu">+ Tambah Menu</string>


    <string name="title_activity_maps">Map</string>
    <string name="url_default_avatar"><![CDATA[https://firebasestorage.googleapis.com/v0/b/i-life-833fa.appspot.com/o/profile_default.png?alt=media&token=6046bdbe-63f3-4ed6-819b-6ea686b25475]]></string>
    <string name="tv_default_address">Tentukan Lokasi Anda</string>
    <string name="version_name">Versi 0.7 Beta</string>
    <string name="harga_deskripsi_kemampuan"><![CDATA[Harga & Deskripsi Kemampuan]]></string>
    <string name="baca_ketentuan_dan_kebijakan_privasi_kami">Baca ketentuan dan kebijakan privasi kami</string>
    <string name="disini"> Disini.</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="alamat_mitra">Alamat Mitra</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="dengan_mendaftar_anda_setuju_dengan_ketentuan_layanan_dan_perlindungan_privasi_pada_aplikasi_mitra_i_life">Dengan mendaftar, Anda setuju dengan ketentuan layanan dan perlindungan privasi pada aplikasi Mitra i-life</string>
    <string name="buat_akun_anda_sekarang_dan_mulailah_membuka_usaha_di_i_life">Buat akun anda sekarang, dan mulailah membuka usaha di i-life</string>
    <string name="daftar">Daftar</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="by_i_bunda">by i-bunda</string>
    <string name="bergabung_sejak">Bergabung Sejak  </string>
    <string name="kategori">Kategori</string>
    <string name="total_pesanan_sukses">Total Pesanan Sukses</string>
    <string name="semua">Semua</string>
    <string name="servis_elektronik">Servis Elektronik</string>
    <string name="kebersihan">Kebersihan</string>
    <string name="asisten_kesehatan">Asisten Kesehatan</string>
    <string name="tukang">Tukang</string>
    <string name="guru_les">Guru Les</string>
    <string name="lainnya">Lainnya</string>
    <string name="pilih_kategori_pesanan">Pilih Kategori Pesanan</string>
    <string name="rincian_pesanan">Rincian Pesanan</string>
    <string name="waktu_pemesanan">Waktu Pemesanan</string>
    <string name="tanggal_pemesanan">Tanggal Pemesanan</string>
    <string name="lokasi_pelanggan">Lokasi Pelanggan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pesanan_dibuat">Pesanan Dibuat</string>
    <string name="dana">Dana</string>
    <string name="tawarkan_jasa_anda">Tawarkan Jasa Anda</string>
    <string name="tolak_pekerjaan">Tolak Pekerjaan</string>
    <string name="terima_pekerjaan">Terima Pekerjaan</string>
    <string name="pesanan_diterima">Pesanan Diterima</string>
    <string name="mulai_perjalanan">Mulai Perjalanan</string>
    <string name="sampai_tujuan">Sampai Tujuan</string>
    <string name="hubungi_pelanggan">Hubungi Pelanggan</string>
    <string name="mulai_pekerjaan">Mulai Pekerjaan</string>
    <string name="lihat_penilaian">Lihat Penilaian</string>
    <string name="dibatalkan_oleh">Dibatalkan Oleh</string>
    <string name="alasan_dibatalkan">Alasan Dibatalkan</string>
    <string name="pesanan_dibatalkan">Pesanan Dibatalkan</string>
    <string name="pilih_alasan_penolakan">Pilih Alasan Penolakan</string>
    <string name="pesanan_penuh">Pesanan Penuh</string>
    <string name="masih_dalam_pekerjaan">Masih dalam pekerjaan</string>
    <string name="sedang_istirahat">Sedang istirahat</string>
    <string name="chat">Chat</string>
    <string name="pesanan_khusus">Pesanan Khusus</string>
    <string name="informasi_toko">Informasi Toko</string>
    <string name="transaksi">Transaksi</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="pilih_kategori_toko">Pilih Kategori Toko</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="nama_pengguna_facebook">Nama Pengguna Facebook</string>
    <string name="nama_pengguna_instagram">Nama Pengguna Instagram</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="edit_informasi_toko">Edit Informasi Toko</string>
    <string name="harga_kemampuan"><![CDATA[Harga & Kemampuan]]></string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="edit">EDIT</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="keluar">KELUAR</string>
    <string name="mitra_i_life">Mitra i-life </string>
    <string name="edit_informasi_akun">Edit Informasi Akun</string>
    <string name="lokasi_mitra">Lokasi Mitra</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ulasan_pelanggan">Ulasan Pelanggan</string>
    <string name="kamu_belom_memiliki_toko_disini_nyuk_segera_bikin_toko_kamu">Kamu belom memiliki toko disini.\nYuk segera bikin Toko kamu!</string>
    <string name="tambah_toko">+ Tambah Toko</string>
    <string name="image_empty_toko">Image Empty Toko</string>
    <string name="total_harga">Total Harga</string>
    <string name="toko_anda_belum_mempunyai_penilaian_dan_ulasan_dari_pelanggan">Toko anda belum mempunyai penilaian dan ulasan dari pelanggan.</string>
    <string name="belum_ada_penilaian">Belum ada Penilaian</string>
    <string name="loading">Loading...</string>
    <string name="tunggu_sebentar">Tunggu Sebentar!</string>
    <string name="akun_anda_belum_terverifikasi_oleh_n_pihak_i_life">Akun anda belum terverifikasi oleh\n pihak I-Life</string>
    <string name="untuk_saat_ini_anda_belum_terdaftar_sebagai_mitra_i_life_silahkan_lakukan_pendaftaran_sebagai_mitra_terlebih_dahulu">Untuk saat ini Anda belum terdaftar sebagai Mitra I-Life.\n Silahkan lakukan pendaftaran sebagai Mitra terlebih dahulu.</string>
    <string name="notification">Notifikasi</string>

</resources>