<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="24dp"
    tools:context=".ui.dashboard.profile.createshop.dialogkategorishop.DialogKategoriShopFragment"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pilih_kategori_toko"
        android:textColor="@color/font_default"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34">

        <RadioButton
            android:id="@+id/servis_elektronik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/servis_elektronik"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/kebersihan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/kebersihan"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/asisten_kesehatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/asisten_kesehatan"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/tukang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/tukang"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/guru_les"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/guru_les"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/lainnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/lainnya"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_pilih_kategori"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/pilih_kategori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_kategori" />

</androidx.constraintlayout.widget.ConstraintLayout>