<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:paddingBottom="32dp"
    tools:context=".ui.detailorder.pesanan.dialogtolakpesanan.DialogTolakPesananFragment"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pilih_alasan_penolakan"
        android:textColor="@color/lines"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/rb_pesanan_penuh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/pesanan_penuh"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_masih_kerja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/masih_dalam_pekerjaan"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_sedang_istirahat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="8dp"
            android:text="@string/sedang_istirahat"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_lainnya"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/lainnya"
            android:textColor="@color/colorBackground"
            android:textSize="0dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_rb_lainnya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/lainnya"
        android:inputType="text"
        android:maxLength="35"
        android:maxLines="2"
        android:textColor="@color/font_default"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_kategori"
        app:layout_constraintEnd_toEndOf="@+id/rg_kategori"
        app:layout_constraintStart_toStartOf="@+id/rg_kategori" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tolak_pesanan"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tolak_pekerjaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_kategori" />

</androidx.constraintlayout.widget.ConstraintLayout>

