<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    tools:context=".ui.login.register.RegisterOneFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/daftar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/buat_akun_anda_sekarang_dan_mulailah_membuka_usaha_di_i_life"
            android:textColor="@color/font_default"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusableInTouchMode="true"
            android:hint="@string/nama_pengguna"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:textColorHint="@color/font_default"
            app:hintTextColor="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi"
            app:boxStrokeWidth="2.3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:inputType="text"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:textColorHint="@color/font_default"
            app:hintTextColor="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi"
            app:boxStrokeWidth="2.3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:hint="@string/kata_sandi"
            android:textColorHint="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2.3dp"
            app:hintTextColor="@color/font_default"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:hint="@string/konfirmasi_kata_sandi"
            android:textColorHint="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2.3dp"
            app:hintTextColor="@color/font_default"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/dengan_mendaftar_anda_setuju_dengan_ketentuan_layanan_dan_perlindungan_privasi_pada_aplikasi_mitra_i_life"
                android:textColor="@color/font_default"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"
                android:text="@string/baca_ketentuan_dan_kebijakan_privasi_kami" />

            <TextView
                android:id="@+id/tvPrivasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/disini"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/ButtonStyle"
            app:cornerRadius="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/selanjutnya" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/font_default"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/masuk"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>