<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="176dp"
            android:layout_height="72dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ic_logo_mitra_i_life" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:textColorHint="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2.3dp"
            app:hintTextColor="@color/font_default"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:hint="@string/kata_sandi"
            android:textColorHint="@color/font_default"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2.3dp"
            app:hintTextColor="@color/font_default"
            app:hintTextAppearance="@style/hint_edit_profile_xxhdpi"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/font_default"
                android:textColorHint="@color/font_default"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            app:cornerRadius="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/masuk"
            style="@style/ButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/belum_punya_akun"
                android:textColor="@color/font_default"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/daftar_disini"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/baca_ketentuan_dan_kebijakan_privasi_kami"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPrivasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/disini"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

